--- a/src/app/atoms/modal/RawModal.scss
+++ b/src/app/atoms/modal/RawModal.scss
@@ -1,6 +1,6 @@
 .ReactModal__Overlay {
   opacity: 0;
-  transition: opacity 200ms cubic-bezier(0.13, 0.56, 0.25, 0.99);
+  transition: opacity 200ms var(--fluid-slide-up);
 }
 .ReactModal__Overlay--after-open{
   opacity: 1;
@@ -11,7 +11,7 @@
 
 .ReactModal__Content {
   transform: translateY(100%);
-  transition: transform 200ms cubic-bezier(0.13, 0.56, 0.25, 0.99);
+  transition: transform 200ms var(--fluid-slide-up);
 }
 
 .ReactModal__Content--after-open{
