--- a/src/app/organisms/room/Room.scss
+++ b/src/app/organisms/room/Room.scss
@@ -1,4 +1,12 @@
-.room-container {
-  display: flex;
+@use '../../partials/flex';
+
+.room {
+  @extend .cp-fx__row;
   height: 100%;
+
+  &__content {
+    @extend .cp-fx__item-one;
+    position: relative;
+    overflow: hidden;
+  }
 }
