--- a/src/app/organisms/welcome/Welcome.scss
+++ b/src/app/organisms/welcome/Welcome.scss
@@ -3,6 +3,7 @@
 .app-welcome {
   width: 100%;
   height: 100%;
+  background-color: var(--bg-surface);
 
   & > div {
     @extend .cp-fx__column--c-c;
