--- a/src/app/organisms/room/RoomView.scss
+++ b/src/app/organisms/room/RoomView.scss
@@ -7,16 +7,15 @@
   width: 100%;
   position: absolute;
   top: 0;
-  z-index: 99;
+  z-index: 999;
   box-shadow: none;
 
-  transition: transform 200ms var(--fluid-slide-down),
-    box-shadow 200ms var(--fluid-slide-down);
+  transition: transform 200ms var(--fluid-slide-down);
 
   &--dropped {
     transform: translateY(calc(100% - var(--header-height)));
     border-radius: var(--bo-radius) var(--bo-radius) 0 0;
-    box-shadow: var(--bs-popup);
+    box-shadow: 0 0 0 1px var(--bg-surface-border);
   }
 
   &__content-wrapper {
