--- a/src/app/organisms/room/settings-panels/ImagePackSettings.scss
+++ b/src/app/organisms/room/settings-panels/ImagePackSettings.scss
@@ -1,44 +1,47 @@
 .pack-settings {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: center;
-  gap: 50px;
-  height: 680px;
 
   &__pack {
-    width: 510px;
     padding: 20px;
-    padding-bottom: 0;
 
     display: grid;
-    grid-template-rows: 0fr 1fr;
+    grid-template-columns: 220px 10fr;
+    height: 500px;
+    margin-bottom: 50px;
   }
 
   &__pack-header {
+    border-right: 1px solid var(--bg-surface-border);
+    padding: 10px;
+    padding-right: 30px;
+
     display: grid;
-    grid-template-columns: 0fr 1fr;
-    grid-template-rows: 1fr 0fr;
-    align-items: center;
-    column-gap: 10px;
+    align-content: center;
+    justify-content: center;
 
-    /* Make this element ignore the parent padding so we can have the border-bottom */
-    margin: -20px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    border-bottom: 1px solid var(--bg-surface-border);
+    .avatar-container__large {
+      width: 150px;
+      height: 150px;
+      margin-bottom: 20px;
+    }
 
-    & > :first-child {
-      grid-area: 1/1/3/2;
+    & > p, & > h2 {
+      width: 150px;
     }
   }
 
   &__image-row {
     display: grid;
-    grid-template-columns: 32px 1fr 0fr;
+    grid-template-columns: 42px 1fr 0fr;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
     margin-bottom: 10px;
+    margin-left: 20px;
+    justify-content: center;
+
+    img {
+      width: 100%;
+      justify-self: center;
+    }
 
     .segmented-controls {
       width: fit-content;
