--- a/src/index.scss
+++ b/src/index.scss
@@ -418,9 +418,9 @@ input[type=checkbox] {
 input[type=checkbox] {
   margin: 0;
   padding: 0;
-  width: 18px;
-  height: 18px;
-  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+  border-radius: calc(var(--bo-radius) / 2);
   box-shadow: var(--bs-primary-border);
   background-color: var(--bg-surface);
   cursor: pointer;
