Add btn and hotkey to close room settings (#269)
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/app/organisms/room/RoomSettings.scss
+++ b/src/app/organisms/room/RoomSettings.scss
@@ -1,9 +1,36 @@
 @use '../../partials/dir';
+@use '../../partials/flex';
 
 .room-settings {
   height: 100%;
   & .scrollbar {
     position: relative;
+  }
+
+  & .header {
+    padding: 0 var(--sp-extra-tight);
+  }
+
+  &__header-btn {
+    min-width: 0;
+    @extend .cp-fx__row--s-c;
+    @include dir.side(margin, 0, auto);
+    padding: var(--sp-ultra-tight) var(--sp-extra-tight);
+    border-radius: calc(var(--bo-radius) / 2);
+    cursor: pointer;
+    
+    @media (hover:hover) {
+      &:hover {
+        background-color: var(--bg-surface-hover);
+        box-shadow: var(--bs-surface-outline);
+      }
+    }
+    &:focus,
+    &:active {
+      background-color: var(--bg-surface-active);
+      box-shadow: var(--bs-surface-outline);
+      outline: none;
+    }
   }
 
   &__content {
