--- a/src/app/organisms/space-manage/SpaceManage.scss
+++ b/src/app/organisms/space-manage/SpaceManage.scss
@@ -77,7 +77,7 @@
 }
 
 .space-manage-item {
-  margin: var(--sp-ultra-tight) 0;
+  margin: var(--sp-ultra-tight) var(--sp-extra-tight);
   padding: 0 var(--sp-extra-tight);
   border-radius: var(--bo-radius);
 
