--- a/src/app/organisms/room/Room.scss
+++ b/src/app/organisms/room/Room.scss
@@ -1,5 +1,7 @@
 @use '../../partials/flex';
 
+$threshold-hide-people-drawer: 750px;
+
 .room {
   @extend .cp-fx__row;
   height: 100%;
@@ -8,5 +10,13 @@
     @extend .cp-fx__item-one;
     position: relative;
     overflow: hidden;
+  }
+}
+
+.room__drawer {
+  @media screen and (max-width: $threshold-hide-people-drawer) {
+    // On compact screen sizes there is not enough space
+    // but no need to view it otherwise as it already is in settings
+    display: none;
   }
 }
