--- a/src/app/organisms/space-settings/SpaceSettings.scss
+++ b/src/app/organisms/space-settings/SpaceSettings.scss
@@ -7,14 +7,10 @@
 
   & .room-profile {
     padding: var(--sp-loose) var(--sp-extra-loose);
-  }
+  } 
 
-  & .tabs {
-    box-shadow: inset 0 -1px 0 var(--bg-surface-border);
-
-    &__content {
-      padding: 0 var(--sp-normal);
-    }
+  & .tabs__content {
+    padding: 0 var(--sp-normal);
   }
 
   &__cards-wrapper {
