Improve code quality; allow passing classNames to IconButton - remove unnessesary div wrappers - use dir.side where appropriate - rename threshold and its mixins to more descriptive names - Rename "OPEN_NAVIGATION" to "NAVIGATION_OPENED"

--- a/src/app/atoms/header/Header.scss
+++ b/src/app/atoms/header/Header.scss
@@ -1,5 +1,6 @@
 @use '../../partials/text';
 @use '../../partials/dir';
+@use '../../partials/screen';
 
 .header {
   @include dir.side(padding, var(--sp-normal), var(--sp-extra-tight));
@@ -39,5 +40,9 @@
       -webkit-line-clamp: 2;
       display: -webkit-box;
     }
+  }
+
+  @include screen.smallerThan(mobileBreakpoint) {
+    @include dir.side(padding, calc(var(--sp-normal) - 10px), var(--sp-extra-tight));
   }
 }
