--- a/src/index.scss
+++ b/src/index.scss
@@ -69,9 +69,13 @@
   --ic-surface-high: #272727;
   --ic-surface-normal: #626262;
   --ic-surface-low: #7c7c7c;
+  --ic-primary-high: #ffffff;
   --ic-primary-normal: #ffffff;
+  --ic-positive-high: rgba(69, 184, 59);
   --ic-positive-normal: rgba(69, 184, 59, 80%);
+  --ic-caution-high: rgba(255, 179, 0);
   --ic-caution-normal: rgba(255, 179, 0, 80%);
+  --ic-danger-high: rgba(240, 71, 71);
   --ic-danger-normal: rgba(240, 71, 71, 0.7);
 
   /* user mxid colors */
