--- a/src/app/templates/client/Client.scss
+++ b/src/app/templates/client/Client.scss
@@ -19,7 +19,7 @@
 }
 
 @include screen.smallerThan(mobileBreakpoint) {
-  .client-container-item__hidden {
+  .client__item-hidden {
     display: none;
   }
 }
