Add SSSS and key backup

--- a/src/app/organisms/settings/CrossSigning.scss
+++ b/src/app/organisms/settings/CrossSigning.scss
@@ -45,10 +45,11 @@
   }
 }
 
+.cross-signing__failure,
 .cross-signing__reset {
   padding: var(--sp-normal);
   padding-top: var(--sp-extra-loose);
   & > .text {
-    padding-bottom: var(--sp-loose);
+    padding-bottom: var(--sp-normal);
   }
 }
