--- a/src/app/organisms/room/RoomViewHeader.scss
+++ b/src/app/organisms/room/RoomViewHeader.scss
@@ -1,5 +1,6 @@
 @use '../../partials/flex';
 @use '../../partials/dir';
+@use '../../partials/screen';
 
 .room-header__btn {
   min-width: 0;
@@ -23,5 +24,19 @@
     background-color: var(--bg-surface-active);
     box-shadow: var(--bs-surface-outline);
     outline: none;
+  }
+}
+
+.header .room-header__drawer-btn {
+  @include screen.smallerThan(tabletBreakpoint) {
+    display: none;
+  }
+}
+
+.header .room-header__back-btn {
+  @include dir.side(margin, 0, 5px);
+
+  @include screen.biggerThan(mobileBreakpoint) {
+    display: none;
   }
 }
