Load sound file on startup (#444)

--- a/src/index.scss
+++ b/src/index.scss
@@ -475,6 +475,10 @@ textarea {
                                   supported by Chrome, Edge, Opera and Firefox */
 }
 
+audio:not([controls]) {
+  display: none !important;
+}
+
 .flex--center {
   display: flex;
   justify-content: center;
